# swiggy-track

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  commitlint.config.js  eslint.config.js  hacs.json  lint-staged.config.js  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/cookie-extractor/: README.md  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
apps/cookie-extractor/src/: browser.ts  cookie-jar.ts  login.ts  output.ts  routes.ts  server.ts  session-store.ts  swiggy-client.ts  templates.ts  types.ts
apps/cookie-extractor/tests/: cli.test.ts  cookie-jar.test.ts  extract.test.ts  output.test.ts  routes.test.ts  session-store.test.ts  swiggy-client.test.ts
apps/cookie-extractor/tests/fixtures/: order-list-success.json  order-list-unauthenticated.json  otp-verify-invalid.json  otp-verify-success.json  sms-otp-rate-limited.json  sms-otp-success.json
custom_components/swiggy/: __init__.py  api.py  binary_sensor.py  config_flow.py  coordinator.py  manifest.json  models.py
docs/: ARCHITECTURE.md  SWIGGY_API_NOTES.md
integrations/swiggy/: README.md
integrations/swiggy/custom_components/swiggy/: __init__.py  const.py  manifest.json  sensor.py  services.yaml
integrations/swiggy/custom_components/swiggy/translations/: en.json
integrations/swiggy/tests/: conftest.py  test_coordinator.py  test_models.py  test_sensor.py
integrations/swiggy/tests/fixtures/: active_order.json  no_active_order.json
scripts/: preflight.sh  probe.py
tests/: test_api.py  test_config_flow.py  test_init.py
tests/fixtures/: auth_failure.json
